Closes #60 Library Initialization Manager and subtasks (closes #56, closes #57, closes #58, closes #59).